--- a/style.css
+++ b/style.css
@@ -36,3 +36,71 @@ body {
   background-color: #eee7e7;
   color: #563232;
 }
+
+hr {
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 20px 0;
+  }
+  
+  img {
+    width: 100px;
+    border-radius: 30%;
+    float: left;
+    margin-right: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .username {
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-top: 10px;
+  }
+  
+  h2 {
+    border-bottom: 3px solid #ccc;
+    margin-top: 60px;
+  }
+  
+  h1, h2 {
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Sans Unicode", Verdana, sans-serif;
+    font-style: italic;
+    color: #333;
+  }
+  
+  li {
+    margin-bottom: 10px;
+  }
+  
+  li em {
+    display: block;
+    font-style: normal;
+    color: #777;
+  }
+  
+  .checked {
+    color: orange;
+  }
+  
+  p {
+    margin-bottom: 20px;
+  }
+  
+  a {
+    color: #1a0dab;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  footer {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 0.8em;
+    color: #777;
+  }
+  
+  
